
  Ref #5392

* The ``level`` attribute of ``BaseChecker`` has been deprecated: everything is now
  displayed in ``--help``, all the time.

  Ref #5392

* The ``options_providers`` attribute of ``ArgumentsManager`` has been deprecated.

  Ref #5392

* The ``option_groups`` attribute of ``PyLinter`` has been deprecated.

  Ref #5392


* The ``set_option`` method of ``BaseChecker`` has been deprecated. You can use ``checker.linter.set_option``
  to set an option on the global configuration object instead of a checker-specific object.

  Ref #5392

* The ``config`` attribute of ``PyLinter`` is now of the ``argparse.Namespace`` type instead of
  ``optparse.Values``.

  Ref #5392

* ``MapReduceMixin`` has been deprecated. ``BaseChecker`` now implements ``get_map_data`` and
  ``reduce_map_data``. If a checker actually needs to reduce data it should define ``get_map_data``
  as returning something different than ``None`` and let its ``reduce_map_data`` handle a list
  of the types returned by ``get_map_data``.
  An example can be seen by looking at ``pylint/checkers/similar.py``.

* ``UnsupportedAction`` has been deprecated.

  Ref #5392

* ``OptionsManagerMixIn`` has been deprecated.

  Ref #5392

* ``OptionParser`` has been deprecated.

  Ref #5392

* ``Option`` has been deprecated.

  Ref #5392

* ``OptionsProviderMixIn`` has been deprecated.

  Ref #5392

* ``ConfigurationMixIn`` has been deprecated.

  Ref #5392

* ``get_global_config`` has been deprecated. You can now access all global options from
  ``checker.linter.config``.

  Ref #5392

* ``OptionsManagerMixIn`` has been replaced with ``ArgumentsManager``. ``ArgumentsManager`` is considered
  private API and most methods that were public on ``OptionsManagerMixIn`` have now been deprecated and will
  be removed in a future release.

  Ref #5392

* ``OptionsProviderMixIn`` has been replaced with ``ArgumentsProvider``. ``ArgumentsProvider`` is considered