@@ -6,6 +6,7 @@ from __future__ import annotations
 
 import os
 import sys
+import warnings
 from typing import TYPE_CHECKING, TextIO
 from warnings import warn
 
@@ -30,6 +31,12 @@ class BaseReporter:
     """Name of the reporter."""
 
     def __init__(self, output: TextIO | None = None) -> None:
+        if getattr(self, "__implements__", None):
+            warnings.warn(
+                "Using the __implements__ inheritance pattern for BaseReporter is no "
+                "longer supported. Child classes should only inherit BaseReporter",
+                DeprecationWarning,
+            )
         self.linter: PyLinter
         self.section = 0
         self.out: TextIO = output or sys.stdout
